# rnnoise-cli

./: CMakeLists.txt
cmake/: githash.cmake
src/: CMakeLists.txt  rnnoise-cli.c
